# swh-loader-core

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  PKG-INFO  pyproject.toml  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.py  swh-loader-core_0.0.1.orig.tar.gz.delta  swh-loader-core_0.0.1.orig.tar.gz.id  swh-loader-core_0.0.10.orig.tar.gz.delta  swh-loader-core_0.0.10.orig.tar.gz.id  swh-loader-core_0.0.11.orig.tar.gz.delta  swh-loader-core_0.0.11.orig.tar.gz.id  swh-loader-core_0.0.12.orig.tar.gz.delta  swh-loader-core_0.0.12.orig.tar.gz.id  swh-loader-core_0.0.13.orig.tar.gz.delta  swh-loader-core_0.0.13.orig.tar.gz.id  swh-loader-core_0.0.14.orig.tar.gz.delta  swh-loader-core_0.0.14.orig.tar.gz.id  swh-loader-core_0.0.15.orig.tar.gz.delta  swh-loader-core_0.0.15.orig.tar.gz.id  swh-loader-core_0.0.16.orig.tar.gz.delta  swh-loader-core_0.0.16.orig.tar.gz.id  swh-loader-core_0.0.17.orig.tar.gz.delta  swh-loader-core_0.0.17.orig.tar.gz.id  swh-loader-core_0.0.18.orig.tar.gz.delta  swh-loader-core_0.0.18.orig.tar.gz.id  swh-loader-core_0.0.19.orig.tar.gz.delta  swh-loader-core_0.0.19.orig.tar.gz.id  swh-loader-core_0.0.2.orig.tar.gz.delta  swh-loader-core_0.0.2.orig.tar.gz.id  swh-loader-core_0.0.20.orig.tar.gz.delta  swh-loader-core_0.0.20.orig.tar.gz.id  swh-loader-core_0.0.21.orig.tar.gz.delta  swh-loader-core_0.0.21.orig.tar.gz.id  swh-loader-core_0.0.22.orig.tar.gz.delta  swh-loader-core_0.0.22.orig.tar.gz.id  swh-loader-core_0.0.23.orig.tar.gz.delta  (+363 more)
debian/: changelog  control  pybuild.testfiles
debian/patches/: deactivate-opam-tests.diff  series
docs/: package-loader-specifications.rst  package-loader-tutorial.rst
swh.loader.core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
swh.loader.egg-info/: SOURCES.txt
swh.loader.vcs.egg-info/: PKG-INFO  SOURCES.txt
swh/loader/: cli.py  pytest_plugin.py
swh/loader/core/: __init__.py  discovery.py  loader.py  metadata_fetchers.py  nar.py  utils.py
swh/loader/core/tests/: conftest.py  dummy_loader.py  test_loader.py  test_tasks.py  test_utils.py
swh/loader/package/: loader.py  utils.py
swh/loader/package/arch/: loader.py  tasks.py
swh/loader/package/arch/tests/: test_arch.py  test_tasks.py
swh/loader/package/archive/: loader.py
swh/loader/package/cpan/: loader.py
swh/loader/package/cran/: loader.py
swh/loader/package/crates/: loader.py
swh/loader/package/debian/: loader.py  tasks.py
swh/loader/package/deposit/: loader.py
swh/loader/package/functional/: loader.py
swh/loader/package/golang/: loader.py
swh/loader/package/hackage/: loader.py
swh/loader/package/hex/: loader.py
swh/loader/package/maven/: loader.py
swh/loader/package/nixguix/: loader.py
swh/loader/package/npm/: loader.py
swh/loader/package/opam/: loader.py
swh/loader/package/pubdev/: loader.py  tasks.py
swh/loader/package/puppet/: loader.py
swh/loader/package/pypi/: loader.py
swh/loader/package/rpm/: loader.py
swh/loader/package/rubygems/: loader.py
swh/loader/package/tests/: test_loader.py  test_loader_metadata.py  test_utils.py
swh/loader/tests/: __init__.py  conftest.py  test_cli.py  test_init.py  test_tasks.py
swh/loader/vcs/: cache.py  loader.py
swh/loader/vcs/tests/: test_cache.py
(+68 files in other folders)
