[project]
name = "swh.loader.core"
authors = [
	{name="Software Heritage developers", email="swh-devel@inria.fr"},
]
description = "Software Heritage core and package loaders"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["swh.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt", "requirements-swh.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
testing = {file = ["requirements-test.txt"]}

[project.entry-points."swh.cli.subcommands"]
"swh.loader.core" = "swh.loader.cli"
"swh.loader.core.nar" = "swh.loader.core.nar"

[project.entry-points."swh.workers"]
"swh.loader.content" = "swh.loader.core:register_content"
"swh.loader.directory" = "swh.loader.core:register_directory"
"swh.loader.arch" = "swh.loader.package.arch:register"
"swh.loader.archive" = "swh.loader.package.archive:register"
"swh.loader.aur" = "swh.loader.package.aur:register"
"swh.loader.conda" = "swh.loader.package.conda:register"
"swh.loader.cpan" = "swh.loader.package.cpan:register"
"swh.loader.cran" = "swh.loader.package.cran:register"
"swh.loader.crates" = "swh.loader.package.crates:register"
"swh.loader.debian" = "swh.loader.package.debian:register"
"swh.loader.deposit" = "swh.loader.package.deposit:register"
"swh.loader.golang" = "swh.loader.package.golang:register"
"swh.loader.hackage" = "swh.loader.package.hackage:register"
"swh.loader.hex" = "swh.loader.package.hex:register"
"swh.loader.nixguix" = "swh.loader.package.nixguix:register"
"swh.loader.npm" = "swh.loader.package.npm:register"
"swh.loader.opam" = "swh.loader.package.opam:register"
"swh.loader.pubdev" = "swh.loader.package.pubdev:register"
"swh.loader.puppet" = "swh.loader.package.puppet:register"
"swh.loader.pypi" = "swh.loader.package.pypi:register"
"swh.loader.maven" = "swh.loader.package.maven:register"
"swh.loader.rubygems" = "swh.loader.package.rubygems:register"
"swh.loader.rpm" = "swh.loader.package.rpm:register"
"swh.loader.bioconductor" = "swh.loader.package.bioconductor:register"

[project.urls]
"Homepage" = "https://gitlab.softwareheritage.org/swh/devel/swh-loader-core"
"Bug Reports" = "https://gitlab.softwareheritage.org/swh/devel/swh-loader-core/-/issues"
"Funding" = "https://www.softwareheritage.org/donate"
"Documentation" = "https://docs.softwareheritage.org/devel/swh-loader-core/"
"Source" = "https://gitlab.softwareheritage.org/swh/devel/swh-loader-core.git"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.1"

[tool.black]
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
